_sass/_syntax_everforest.scss
/* 
#2D353B  background
#859289  comments / secondary content
#D3C6AA  body text / default code / primary content
#83C092  constants
#DBBC7F  regex, special keywords
#7FBBB3  reserved keywords
#2aa198  strings, numbers
#E69875  operators, other keywords
*/

.language-plaintext {
  background-color: rgba(45, 53, 59, 0.1);
  color: #4a565d;
  font-size: 90%;
  padding: 0.15rem 0.35rem;
  border-radius: 0.25rem;
  hyphens: none;
  -webkit-hyphens: none;
}

.highlight {
  background-color: #2d353b;
  color: #d3c6aa;
  font-size: 95%;
  border: 0px;
  padding: 0.5em;
}
.highlight .lineno {
  color: #859289;
} /* Line Numbers */
.highlight .c {
  color: #859289;
} /* Comment */
.highlight .err {
  color: #d3c6aa;
} /* Error */
.highlight .g {
  color: #d3c6aa;
} /* Generic */
.highlight .k {
  color: #e69875;
} /* Keyword */
.highlight .l {
  color: #d3c6aa;
} /* Literal */
.highlight .n {
  color: #d3c6aa;
} /* Name */
.highlight .o {
  color: #e69875;
} /* Operator */
.highlight .x {
  color: #83c092;
} /* Other */
.highlight .p {
  color: #d3c6aa;
} /* Punctuation */
.highlight .cm {
  color: #859289;
} /* Comment.Multiline */
.highlight .cp {
  color: #e69875;
} /* Comment.Preproc */
.highlight .c1 {
  color: #859289;
} /* Comment.Single */
.highlight .cs {
  color: #e69875;
} /* Comment.Special */
.highlight .gd {
  color: #2aa198;
} /* Generic.Deleted */
.highlight .ge {
  color: #d3c6aa;
  font-style: italic;
} /* Generic.Emph */
.highlight .gr {
  color: #dbbc7f;
} /* Generic.Error */
.highlight .gh {
  color: #83c092;
} /* Generic.Heading */
.highlight .gi {
  color: #e69875;
} /* Generic.Inserted */
.highlight .go {
  color: #d3c6aa;
} /* Generic.Output */
.highlight .gp {
  color: #d3c6aa;
} /* Generic.Prompt */
.highlight .gs {
  color: #d3c6aa;
  font-weight: bold;
} /* Generic.Strong */
.highlight .gu {
  color: #83c092;
} /* Generic.Subheading */
.highlight .gt {
  color: #d3c6aa;
} /* Generic.Traceback */
.highlight .kc {
  color: #83c092;
} /* Keyword.Constant */
.highlight .kd {
  color: #7fbbb3;
} /* Keyword.Declaration */
.highlight .kn {
  color: #e69875;
} /* Keyword.Namespace */
.highlight .kp {
  color: #e69875;
} /* Keyword.Pseudo */
.highlight .kr {
  color: #7fbbb3;
} /* Keyword.Reserved */
.highlight .kt {
  color: #dbbc7f;
} /* Keyword.Type */
.highlight .ld {
  color: #d3c6aa;
} /* Literal.Date */
.highlight .m {
  color: #2aa198;
} /* Literal.Number */
.highlight .s {
  color: #2aa198;
} /* Literal.String */
.highlight .na {
  color: #d3c6aa;
} /* Name.Attribute */
.highlight .nb {
  color: #b58900;
} /* Name.Builtin */
.highlight .nc {
  color: #7fbbb3;
} /* Name.Class */
.highlight .no {
  color: #83c092;
} /* Name.Constant */
.highlight .nd {
  color: #7fbbb3;
} /* Name.Decorator */
.highlight .ni {
  color: #83c092;
} /* Name.Entity */
.highlight .ne {
  color: #83c092;
} /* Name.Exception */
.highlight .nf {
  color: #7fbbb3;
} /* Name.Function */
.highlight .nl {
  color: #d3c6aa;
} /* Name.Label */
.highlight .nn {
  color: #d3c6aa;
} /* Name.Namespace */
.highlight .nx {
  color: #d3c6aa;
} /* Name.Other */
.highlight .py {
  color: #d3c6aa;
} /* Name.Property */
.highlight .nt {
  color: #7fbbb3;
} /* Name.Tag */
.highlight .nv {
  color: #7fbbb3;
} /* Name.Variable */
.highlight .ow {
  color: #e69875;
} /* Operator.Word */
.highlight .w {
  color: #d3c6aa;
} /* Text.Whitespace */
.highlight .mf {
  color: #2aa198;
} /* Literal.Number.Float */
.highlight .mh {
  color: #2aa198;
} /* Literal.Number.Hex */
.highlight .mi {
  color: #2aa198;
} /* Literal.Number.Integer */
.highlight .mo {
  color: #2aa198;
} /* Literal.Number.Oct */
.highlight .sb {
  color: #859289;
} /* Literal.String.Backtick */
.highlight .sc {
  color: #2aa198;
} /* Literal.String.Char */
.highlight .sd {
  color: #d3c6aa;
} /* Literal.String.Doc */
.highlight .s2 {
  color: #2aa198;
} /* Literal.String.Double */
.highlight .se {
  color: #83c092;
} /* Literal.String.Escape */
.highlight .sh {
  color: #d3c6aa;
} /* Literal.String.Heredoc */
.highlight .si {
  color: #2aa198;
} /* Literal.String.Interpol */
.highlight .sx {
  color: #2aa198;
} /* Literal.String.Other */
.highlight .sr {
  color: #dbbc7f;
} /* Literal.String.Regex */
.highlight .s1 {
  color: #2aa198;
} /* Literal.String.Single */
.highlight .ss {
  color: #2aa198;
} /* Literal.String.Symbol */
.highlight .bp {
  color: #7fbbb3;
} /* Name.Builtin.Pseudo */
.highlight .vc {
  color: #7fbbb3;
} /* Name.Variable.Class */
.highlight .vg {
  color: #7fbbb3;
} /* Name.Variable.Global */
.highlight .vi {
  color: #7fbbb3;
} /* Name.Variable.Instance */
.highlight .il {
  color: #2aa198;
} /* Literal.Number.Integer.Long */

